--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test",
+  "name": "aws-cdk-split-horizon-dns",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hello/test.git"
+    "url": "https://github.com/iamflowz/aws-cdk-split-horizon-dns.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -38,7 +38,7 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.1.0",
+    "aws-cdk-lib": "2.62.2",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.7",
@@ -58,7 +58,7 @@
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.62.2",
     "constructs": "^10.0.5"
   },
   "keywords": [
