--- a/package.json
+++ b/package.json
@@ -61,7 +61,11 @@
     "constructs": "^10.0.5"
   },
   "keywords": [
-    "cdk"
+    "aws",
+    "awscdk",
+    "cdk",
+    "dns",
+    "route53"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
